# software-factory

./: .dockerignore  .gitignore  .prettierignore  .superpowers-ci-hotfix-report.md  .superpowers-mssql-lock-report.md  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTEXT.md  DESIGN.md  HANDOFF.md  Makefile  PRODUCT.md  README.md  RESEARCH.md  Taskfile.yml  VERIFICATION.md  angular.json  architecture.html  docker-compose.yml  eslint.config.js  implementation-notes.md  package-lock.json  package.json  research-findings.json  tsconfig.json
api/: .dockerignore  Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 1ec2ff72f759_baseline_full_schema_from_models.py  482ab25da09c_intent_log.py  7a7baeeea188_merge_plan_c_stack_with_reject_gate_.py  7f2a9c4d1e88_stage_jobs.py  893ac1fcca61_leader_epoch_table.py  a1b2c3d4e5f6_acceptance_criteria.py  a2f4c6e8b0d2_import_edits.py  a8c0e2f4b6d8_intake_escalation_cache.py  b2c4e6a8d0f1_stage_job_uid.py  b71c2e4f9a10_rebuild_leader_epoch_without_identity.py  b7d9f1a3c5e8_reporter_budget_index.py  c3e5a7b9d1f4_classification_result.py  c9d1f3a5b7e2_operator_role.py  d4e6f8a0c2b4_widen_stage_job_role.py  d5f7a9c1e3b5_concurrent_turn_indexes.py  e6a8c0f2b4d7_brain_calls.py  e7a9c1d3b5f0_harness_lineage_pending_feedback.py  e7f9a1c3d5b7_unicode_human_text.py  f6a8c0e2b4d6_preview_feedback.py  f7b9d1e3c5a7_brain_call_tool_rounds.py
api/app/: acceptance.py  agent_brain.py  agent_exec.py  agent_runner.py  api_helpers.py  attachments.py  auth.py  brain_api.py  brain_calls.py  brain_streams.py  brain_tools.py  classify_gen.py  claude_brain.py  claude_exec.py  claude_runner.py  cost.py  db.py  deploy_manifests.py  events.py  github.py  harness.py  heartbeat.py  intents.py  interview.py  interview_gen.py  knowledge.py  kube_client.py  kube_jobs.py  kube_runner.py  leader.py  lifecycle.py  log_scrub.py  main.py  models.py  notifications.py  prototype_gen.py  registry.py  revision.py  schemas.py  seed.py  (+9 more)
api/app/opencode/: factory-prototype.json  factory-readonly.json
api/app/routers/: __init__.py  attachments.py  events.py  gates.py  harness.py  (+5 more)
api/tests/: conftest.py  fake_github.py  fake_kube.py  helpers.py  test_acceptance.py  test_agent_brain_attachments.py  test_agent_exec.py  test_agent_permission_modes.py  test_agent_runner.py  test_api.py  test_api_helpers.py  test_architecture.py  test_architecture_gate.py  test_attachments.py  test_auth.py  test_brain_api.py  test_brain_budget.py  test_brain_escalation.py  test_brain_streams.py  test_brain_tools.py  test_classify.py  test_classify_endpoint.py  test_classify_gen.py  test_classify_phases.py  test_claude_runner.py  test_concurrent_create.py  test_conflict_safe_actions.py  test_conversational_stop.py  test_cost.py  test_data_dr.py  test_db_engine.py  test_deploy_manifests.py  test_deploy_runner.py  test_deploy_settings.py  test_deploy_yaml.py  test_design_rules.py  test_email_and_freshness.py  test_escalation.py  test_evidence_fidelity.py  test_fail01_timeouts.py  (+46 more)
(+707 files in other folders)
