[project]
name = "software-factory-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
