[project]
name = "aires-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.116.0",
    "fastapi>=0.136.3",
    "kubernetes",
    "pyjwt[crypto]>=2.13.0",
    "pyodbc>=5.3.0", # mssql+pyodbc dialect (Azure SQL) — not imported by application runtime code; used by the mssql URL driver and the CI bootstrap
    "pyyaml>=6.0.3",
    # pytest is a RUNTIME dependency: the claude runner shells out to it for
    # the RED/GREEN gates, including inside the --no-dev container image
    "pytest>=9.0.3",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ruff>=0.15.16",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
    "E501",   # the repo's comment-heavy lines run long by intent
    "B008",   # TODO(lint-debt): FastAPI Depends() in defaults is idiomatic — refactor requires dependency injection rewrite
    "B904",   # TODO(lint-debt): raise-from chain — would change exception context in all error paths
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
