[project]
name = "app"
version = "0.1.0"
description = "Golden Template FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[tool.uv]
# Not a distributable package: deps install from the lock, the app runs from
# the source tree. Keeps the egress-walled gate 100% lock-driven (no build
# backend to resolve from an index).
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
